--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reactapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://kimgomizzou.github.io/Clicky-Game",
+  "homepage": "https://ashleighbarnard.github.io/react-game/",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
